añadir logo minimalista y favicon (navicon)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>la diega</title>
+    <link rel="icon" type="image/png" href="data/navicon.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,7 +16,7 @@
 
     <!-- Logo -->
     <div class="logo">
-        <div class="logo-placeholder">logo la diega</div>
+        <img src="data/logo.png" alt="la diega" class="logo-image">
     </div>
 
     <!-- Menu -->
