--- a/project.html
+++ b/project.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>la diega - project</title>
+    <link rel="icon" type="image/png" href="data/navicon.png">
     <link rel="stylesheet" href="project-styles.css">
 </head>
 <body>
