mejoras de diseño y UX: menú centrado, slider vertical, purple 2, botón random con ruleta y transiciones fluidas

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <div id="projectList"></div>
     </nav>
 
+    <!-- Random button -->
+    <button id="randomBtn" class="random-btn">random</button>
+
     <!-- Volume control -->
     <div class="volume-control">
         <button id="volumeBtn" class="volume-btn">
